tests/errors/compiler/not_string_in_stanfunc/int_argument.c
int main() 
{	
	int a,b;
	strcmp(a,b);
	//hjk //нужно раскоментить чтобы код дальнейший читался корректно
	return 0;
}
